--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "name": "website",
   "version": "1.0.0",
   "description": "website",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
+  "dependencies": {
+    "tsc": "^2.0.4",
+    "tsx": "^4.20.6"
+  },
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "@eslint/js": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "eslint": "^9.36.0",
+    "eslint_d": "^14.3.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.0",
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.44.1"
   }
 }
